--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  margin: 0.4rem auto;
+  /*max-width: 1296px;*/
+  font-family: "Poppins", sans-serif;
+  color: #282c34;
+  background-color: #f7f7f7;
+}
+li {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: #282c34;
+  cursor: pointer;
+}
+a:visited {
+  color: #282c34;
+}
+
+/******CARD*****/
+.card {
+  height: 240px;
+  position: relative;
+  margin: 10px;
+  box-shadow: 0 0 2px rgba(51, 51, 51, 0.25);
+  transition: 0.3s;
+  overflow: hidden;
+  border-radius: 4px;
+}
+/*.data-container {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.2s;
+}
+
+ul {
+  color: #f7f7f7;
+  padding-top: 5px;
+  display: grid;
+  height: 100%;
+  width: 100%;
   text-align: center;
-}
+  transition: 0.3s;
+  transform: scaleY(0.3);
+  z-index: 20;
+}*/
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/******COUNTRIES*****/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.countries {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
+  padding: 8px;
+  border-radius: 15px;
+  background: #282c34;
   color: #61dafb;
+  box-shadow: 0 2px 2px rgba(51, 51, 51, 0.3);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.countries-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.data-container-form {
+  text-align: center;
 }
